# BodyCompSimulator

./: .gitignore  LICENSE  MODEL_V2.md  README.md  app.py  app_inputs.py  app_results.py  bodycomp.py  chart_combined.py  chart_common.py  chart_energy.py  chart_tissue.py  input_profile.py  input_training.py  launcher.py  logic.py  main.py  phase_duration.py  protocol_base2.py  protocol_targets.py  pyproject.toml  requirements.txt  style.css
.github/workflows/: test.yml  tests.yml
bodycomp/: __init__.py  core.py  cut.py  gain.py  input_factory.py  phase.py  report.py  rows.py  runner.py  simulation.py
docs/: model.md
tests/: test_bodycomp.py  test_final_maintenance.py  test_logic.py
